# odins-eye

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  deploy.sh  mypy.ini  pyproject.toml  pyrightconfig.json
app/: main.py  requirements.txt
app/templates/: dashboard.html  gpu-monitor.html
docker/: Dockerfile  docker-compose.yml
scripts/: deploy-complete.sh  deploy.sh  fix-missing-components.sh  package.sh  run-all-verifications.sh  setup-dx.sh  status.sh  troubleshoot.sh  verify-ai-gpu.sh  verify-docker.sh  verify-jupyter.sh  verify-services.sh  verify.sh
