[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odins-eye-platform"
version = "1.0.0"
description = "A complete, production-ready AI/ML platform with GPU support, monitoring, and development tools"
authors = [
    {name = "Odin's Eye Team", email = "team@odins-eye.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "flask>=3.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.66.0",
    "rich>=13.6.0",
    "click>=8.1.0",
    "psutil>=5.9.0",
    "jinja2>=3.1.0",
    "jupyterlab>=4.0.0",
    "jupyter>=1.0.0",
    "tensorflow>=2.15.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
disallow_untyped_defs = false
check_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tensorflow.*",
    "torch.*",
    "transformers.*",
    "cv2.*",
    "PIL.*",
    "matplotlib.*",
    "numpy.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
